src/snapshots/backup__runner__tests__snapshot_rustic_base_no_sudo.snap
---
source: src/runner.rs
expression: cmd
---
[
    "rustic",
    "-r",
    "/tmp/repo",
    "--password",
    "hunter2",
]
