src/snapshots/backup__runner__tests__snapshot_rustic_base_with_sudo.snap
---
source: src/runner.rs
expression: cmd
---
[
    "doas",
    "rustic",
    "-r",
    "/tmp/repo",
    "--password",
    "hunter2",
]
